--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -65,8 +65,8 @@
     top: 0;
     left: 0;
     bottom: 0;
-    width: 18rem;
-    text-align: left;
+    width: 20rem;
+    text-align: center;
   }
 }
 
@@ -128,7 +128,7 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48em) {
   .content {
-    max-width: 60rem;
+    max-width: 48rem;
     margin-left: 20rem;
     margin-right: 2rem;
   }
