--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -141,6 +141,26 @@ a.sidebar-nav-item:focus {
   }
 }
 
+.content1 {
+  padding-top:    4rem;
+  padding-bottom: 4rem;
+}
+
+@media (min-width: 30em) {
+  .content1 {
+    max-width: 44rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+}
+
+@media (min-width: 64em) {
+  .content1 {
+    margin-left: 22rem;
+    margin-right: 4rem;
+  }
+}
+
 
 /*
  * Reverse layout
